[MASPECTJ-129] Change name on site to "Mojo's AspectJ Maven Plugin"
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@18953 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/site/apt/examples/weaveDirectories.apt.vm
+++ b/src/site/apt/examples/weaveDirectories.apt.vm
@@ -7,7 +7,7 @@
 Weaving already compiled classes
 
   AspectJ gives a possibility to weave already compiled classes in a folder.
-  In order to do this with the AspectJ Plugin you need to specify the folder(s)
+  In order to do this with Mojo's AspectJ Maven Plugin you need to specify the folder(s)
   with the compiled classes via <<<weaveDirectories>>> and execute the plugin after
   maven-compiler-plugin has been run (life cycle phase "process-classes" or later).
 
