--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -1,12 +1,12 @@
  ------
- About "AspectJ Maven Plugin"
+ Introduction
  ------
  ------
  ------
 
-AspectJ Maven Plugin overview
+Mojo's AspectJ Maven Plugin
 
-  The AspectJ-Maven-Plugin weaves AspectJ aspects into your classes using the AspectJ compiler ("ajc").
+  This plugin  weaves AspectJ aspects into your classes using the AspectJ compiler ("ajc").
   There are typically two ways to package and use aspects in your Maven reactors; either as a standalone
   project where aspects and code are defined within the same Maven project - or as part of a multi-module
   Maven reactor where one/some project(s) contains aspects and other projects within the Maven reactor
